--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^3.1.1",
+		"@11ty/eleventy-img": "^6.0.4",
 		"npm-run-all": "^4.1.5",
 		"sass": "^1.89.2"
 	},
