--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@11ty/eleventy": "^3.1.1",
 		"@11ty/eleventy-img": "^6.0.4",
+		"cross-env": "^7.0.3",
 		"npm-run-all": "^4.1.5",
 		"sass": "^1.89.2"
 	},
@@ -20,10 +21,13 @@
 	"type": "module",
 	"scripts": {
 		"build:css": "sass --style=compressed --no-source-map ./source/presentation/scss:./site/presentation/css",
+		"test:css": "sass --style=compressed ./source/presentation/scss:./site/presentation/css",
 		"watch:css": "sass --watch ./source/presentation/scss:./site/presentation/css",
 		"build:site": "npx @11ty/eleventy",
-		"watch:site": "npx @11ty/eleventy --quiet --serve",
+		"test:site": "cross-env BUILD_ENV=test npx @11ty/eleventy --dryrun",
+		"watch:site": "cross-env BUILD_ENV=dev npx @11ty/eleventy --quiet --serve",
 		"build": "npm-run-all build:*",
+		"test": "npm-run-all test:*",
 		"start": "npm-run-all --parallel watch:*"
 	}
 }
