forgot to update action for test build 🤦🏻

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: latest
 
-      - name: Install and build the site
+      - name: Install and test the site build
         run: |
           npm install
-          npm run build
+          npm run test
